fix: consertando overflow do header e a quebra de linha quase no breakpoint

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,27 +97,34 @@ a.removeHyperlinkStyle {
 }
 
 /*HEADER*/
-#nav-header {
+header {
   display: flex;
-  justify-content: space-between;
-  padding: 15px 5%;
-  position: fixed;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
   background: #313131;
-  width: 95%;
+  width: 100%;
+  height: 8rem;
+  position: fixed;
   z-index: 1;
   top: 0;
 }
 
+#nav-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+}
+
 #nav-header .logo {
   color: #fff;
-  margin-bottom: -50px;
+  margin-bottom: -70px;
 }
 
 .logo img {
-  width: 50%;
+  width: 35%;
 }
-
 #logo-simples {
   display: none;
 }
@@ -1374,7 +1381,7 @@ button.publicityBuy {
 }
 
 /* Media query do header */
-@media screen and (max-width: 1230px) {
+@media screen and (max-width: 1290px) {
   #checkbox:checked ~ ul {
     display: block;
     padding-left: 0;
@@ -1427,6 +1434,10 @@ button.publicityBuy {
 
   #checkbox:checked ~ ul {
     display: block;
+  }
+
+  header {
+    background: #313131;
   }
 }
 
